[package]
authors = ["LinskRuis.32G <mgr9525@qq.com>"]
edition = "2018"
name = "hbtp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# proc-macro = true
[dependencies]
qstring = "0.7.2"
ruisutil = {git = "https://github.com/mgr9525/rust-ruisutil.git", rev = "a6763cd48c13598d93fb323d2575fb2ae91a5ca6"}
