[package]
authors = ["LinskRuis.32G <mgr9525@qq.com>"]
edition = "2018"
name = "hbtp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# proc-macro = true
[dependencies]
qstring = {git="https://github.com/mgr9525/qstring.git", rev="1523f04f0e1b50e0b20239035a3027add2140497"}
# ruisutil = {git = "https://github.com/mgr9525/rust-ruisutil.git", rev = "8674fa5ff113e69cde3eb33daabdf583fc26e86e"}
ruisutil = {git = "https://github.com/mgr9525/rust-ruisutil.git", rev = "68439ddcebec4ee0b4a20cf04777a5c7b9443b88"}
# ruisutil={path="../rust-ruisutil"}
